tests/baselines/reference/commentOnImportStatement1.errors.txt
tests/cases/compiler/commentOnImportStatement1.ts(3,22): error TS2307: Cannot find module './foo' or its corresponding type declarations.


==== tests/cases/compiler/commentOnImportStatement1.ts (1 errors) ====
    /* Copyright */
    
    import foo = require('./foo');
                         ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.
    